# rstream

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: cli11.cmake  spdlog.cmake
include/rstream/: common.h  convert.h  device.h  frameset.h  logger.h  util.h
pkg_config/: rstream.pc.in
src/: convert.cpp  device.cpp  frameset.cpp  logger.cpp  util.cpp
